apps/sm-python-test-repo-03/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-python-test-repo-03
  namespace: qa
  labels:
    app: sm-python-test-repo-03
    backstage.io/kubernetes-id: sm-python-test-repo-03
    environment: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-python-test-repo-03
  template:
    metadata:
      labels:
        app: sm-python-test-repo-03
        backstage.io/kubernetes-id: sm-python-test-repo-03
        environment: qa
    spec:
      containers:
        - name: sm-python-test-repo-03
          image: sureshmavp1/sm-python-test-repo-03:1.0.1
          ports:
            - containerPort: 5000
