apps/sm-python-test-repo-03/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-python-test-repo-03
  namespace: qa
  labels:
    backstage.io/kubernetes-id: sm-python-test-repo-03
    environment: qa
spec:
  selector:
    app: sm-python-test-repo-03
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sm-python-test-repo-03-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: sm-python-test-repo-03.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: sm-python-test-repo-03
#             port:
#               number: 80
