apps/sm-python-test-repo-03/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-python-test-repo-03
  namespace: qa
  labels:
    backstage.io/kubernetes-id: sm-python-test-repo-03
    environment: qa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /sm-python-test-repo-03-qa(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: sm-python-test-repo-03
                port:
                  number: 80
